# vtechlabs

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile2  README.md  docker-compose.yml  entrypoint.sh  makefile
db/: init.sql
kubernetes/: server-deployment.yaml  server-service.yaml
src/: controllers.rs  db.rs  main.rs  model.rs  models.rs  routes.rs
